--- a/captan_new/ingress.yaml
+++ b/captan_new/ingress.yaml
@@ -9,7 +9,7 @@ spec:
   - websecure
   routes:
   - kind: Rule
-    match: Host(`trigger.tekton.optimizor.app`)
+    match: Host(`{{ .Host }}`)
     services:
     - name: el-listener
       port: 8080
